<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_challenge_selected">Hello %s, please select a challenge.</string>
    <string name="app_name">Real Battleship</string>
    <string name="change_challenge">Change Challenge</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="reset_challenge">Reset Challenge</string>
    
    <!-- edit user nickname view -->
    <string name="hint_username">Enter your nickname</string>
    <string name="button_continue">Continue</string>
    <string name="label_setup">User Setup</string>
    
    <!--  list view -->
    <string name="challenge_list_empty">No challenges available.</string>
    <string name="challenges">Available Challenges</string>
    
    <!--  home view -->
    <string name="challenge_not_changed">You could not be assigned to this challenge.</string>
    <string name="challenge_changed">Challenge successfully selected.</string>
    <string name="challenge_reset">Challenge reset successful.</string>
    <string name="label_challenge">Challenge</string>
    <string name="label_location">Location</string>
    
    <!-- challenge start -->
    <string name="already_uncovered">Cell already uncovered.</string>
    <string name="ship_position_uncovered">You have uncovered a ship position!</string>
    <string name="ship_uncovered">Congratulations! You uncovered a ship.</string>
    <string name="game_over">Game over! All ships have been uncovered.</string>
    <string name="no_gps">Waiting for GPS signal...</string>
    <string name="label_score">Score: </string>
</resources>
