<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <!--  google mapview -->
    
    <com.google.android.maps.MapView
    android:id="@+id/challenge_map"
    android:layout_width="fill_parent"
    android:layout_height="250dip"
    android:clickable="true"
    android:apiKey="0ALa_LiwCC1hRYy-V76n0JCrju0ryNvVHxIGrBw" />
    
    <FrameLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/frameLayout1">
        <TextView android:text="@string/no_challenge_selected" android:id="@+id/no_challenge_selected" android:layout_width="fill_parent" android:layout_height="40dp" style="@style/no_challenge_selected" />
        <LinearLayout 
        android:id="@+id/linearLayoutChallengeInfo" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout style="@style/row_layout1">
            <TextView android:id="@+id/label_challenge_name" android:layout_height="wrap_content" style="@style/label_challenge_name" android:layout_width="wrap_content" android:text="@string/label_challenge"></TextView>
	    	<TextView android:id="@+id/challenge_name" android:layout_height="wrap_content" style="@style/challenge_name" android:layout_width="wrap_content" android:text="Klagenfurt City Challenge"></TextView>
		</LinearLayout>
    	<LinearLayout style="@style/row_layout1">
    		<TextView android:id="@+id/label_challenge_location" android:layout_height="wrap_content" style="@style/label_challenge_location" android:text="@string/label_location" android:layout_width="wrap_content"></TextView>
    		<TextView android:id="@+id/challenge_location" android:layout_height="wrap_content" style="@style/challenge_location" android:layout_width="wrap_content" android:text="Klagenfurt"></TextView>
    	</LinearLayout>
   		
        
        </LinearLayout>
    </FrameLayout>
    
    <LinearLayout
    	 android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom">
    >
    	<Button android:text="@string/change_challenge" android:layout_height="wrap_content" android:id="@+id/button_change_challenge" android:layout_width="fill_parent"></Button>
    	<Button android:layout_height="wrap_content" android:id="@+id/button_start_challenge" android:layout_width="fill_parent" android:text="@string/start_challenge"></Button>
    	<Button android:layout_height="wrap_content" android:id="@+id/button_view_score" android:layout_width="fill_parent" android:text="@string/view_score"></Button>
    	<Button android:layout_height="wrap_content" android:id="@+id/button_reset_challenge" android:layout_width="fill_parent" android:text="@string/reset_challenge"></Button>
   </LinearLayout>
  

</LinearLayout>
