<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    >
    
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
    	<TextView android:text="@string/label_setup" android:id="@+id/label_setup" style="@style/label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_marginTop="20dp" android:textSize="18dp"></TextView>
    	<EditText android:id="@+id/username" android:layout_height="wrap_content" android:layout_width="fill_parent" android:hint="@string/hint_username" ></EditText>
	    <Button 
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:id="@+id/button_continue" 
	    	android:text="@string/button_continue"	
	    	android:enabled="false"/>
    </LinearLayout>
</LinearLayout>